# ssg

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.sh  develop.sh
blog/: 2015-09-27-about-this-blog.md  2015-09-27-elk-stack-with-rsyslog.md  2015-12-29-homelab-centos-package-management.md  2016-09-08-ceph-single-node-deployment.md  2017-08-19-ansible-puppet-why-not-both.md  2017-08-22-clone-disk-over-network.md  2018-04-22-drone-kubernetes-docker-in-docker-mtu-issues.md  2018-06-03-ansible-is-not-yet-perfect.md  2018-07-01-rabbithole-proc-self-mountstats.md  2018-12-30-sphinx-csv-tables.md  2020-08-30-sso-with-open-id-connect-keycloak.md  2020-09-12-sso-with-open-id-connect-keycloak-part-2.md  2021-09-24-dependency-versioning.md  2021-09-26-error-handling-rust-vs-go.md  2021-11-18-a-git-repository-manager.md
generator/: Cargo.toml
generator/src/: data.rs  fs.rs  icon.rs  main.rs  pages.rs
server/: .gitignore  Cargo.toml  build.rs
server/src/: main.rs
src/: fs.rs  icon.rs  main.rs  render.rs
static/: style.css
