[package]
name = "ssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = {version = "0.19.0", default-features = false, features = ["syntect"] }
maud = "0.25.0"
serde = "1.0.193"
strum = "0.25.0"
strum_macros = "0.25.3"
time = {version = "0.3.30", default-features = false, features = ["serde", "parsing", "local-offset"]}
toml = {version = "0.8.8", default-features = false, features = ["parse"]}
