[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
signal-hook = "0.3.17"

[dependencies.tokio]
version = "1.34.0"
default-features = false
features = [
  "macros",
  "rt-multi-thread",
]

[dependencies.axum]
version = "0.7.1"
default-features = false
features = [
  "tokio",
  "http1",
  "http2",
]

[build-dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
